<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fajarapp"
        android:text="@string/fajarapp"
        android:textColor="@color/white"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_below="@id/fajarapp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#302b2a2a"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#302b2a2a"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn"
        android:layout_below="@id/password"
        android:textColor="@color/design_default_color_on_primary"
        android:text="@string/login"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotpass"
        android:layout_below="@+id/loginbtn"
        android:text="@string/forgot_you_password"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/other"
        android:layout_above="@id/sosialicons"
        android:text="@string/or_sign_in_with"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sosialicons"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="150dp">


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/google"
            android:layout_margin="2dp"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/facebook"
            android:layout_margin="2dp"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/twiter"
            android:layout_margin="2dp"/>

</LinearLayout>

    </RelativeLayout>